src/components/nav-bar/nav-bar.scss
@import '../../styles/_colors.scss';

/* @define NavBar */
.NavBar {
  align-items: center;
  background: $dark3;
  display: flex;
  height: 70px;
  overflow-x: hidden;
  padding: 0 15%;
  position: absolute;
  top: 0;
  width: 100%;

  &-logo {
    height: 40px;
    width: 40px;
  }

  &-tabs {
    align-items: center;
    display: flex;
    height: 100%;
    margin: 0 50px 0 25px;
    overflow-x: scroll;
    text-overflow: ellipsis;
    white-space: nowrap;

    &-tab {
      color: $light3;
      font-weight: 300;
      padding: 0 25px;

      &:hover,
      &.is-active {
        color: $light;
      }
    }
  }

  &-buttons {
    margin-left: auto;

    &-button {
      background: $dark3;
      border-radius: 18px;
      cursor: pointer;
      height: 36px;
      line-height: 36px;
      overflow: hidden;
      text-align: center;
      width: 36px;

      &:hover {
        background: $light;
      }
    }
  }
}

